Day 1: add account features
