# cmd/api/main.go
@@ -1,8 +1,12 @@
 package main
 
 import (
+	customer_usecase "api/internal/application/customer"
 	"api/internal/configuration"
+	customer_postgresql_repository "api/internal/infrastructure/repository/customer/postgresql"
+	session_postgresql_repository "api/internal/infrastructure/repository/session/postgresql"
 	"api/internal/transport/http"
+	account_handler "api/internal/transport/http/handlers/account"
 	"api/pkg/logger"
 	"api/pkg/postgresql"
 	"context"
@@ -30,13 +34,25 @@ func main() {
 		log.Fatal(err)
 	}
 
-	_, err = postgresql.New(&cfg.PostgreSQL)
+	db, err := postgresql.New(&cfg.PostgreSQL)
 	if err != nil {
 		logger.Fatal("failed to connect db", zap.Error(err))
 	}
 
-	httpServer := http.New()
-	httpServer.SetupRouter()
+	// repositories
+	customerRepoPG := customer_postgresql_repository.New(db)
+	sessionRepoPG := session_postgresql_repository.New(db)
+
+	// usecases
+	customerUC := customer_usecase.New(customerRepoPG, sessionRepoPG)
+
+	// handlers
+	accountHandler := account_handler.New(logger, customerUC)
+
+	httpServer := http.New(sessionRepoPG)
+	httpServer.SetupRouter(
+		accountHandler,
+	)
 
 	go func() {
 		if err := httpServer.Run("0.0.0.0:4000"); err != nil {
